# stitch-spike

./: .better-commits.json  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  example.env  main.py  pyproject.toml  test_main.py
.github/workflows/: api-docker-build-and-push.yml  api-lint.yml  api-test.yml  db-test.yml  docker-build-and-push.yml  integration-test.yml  lint.yml  test.yml
api/: Dockerfile  README.md  main.py  pyproject.toml
api/src/stitch_spike/: app.py
api/src/stitch_spike/models/: pydantic_models.py
api/src/stitch_spike/routers/: endpoints.py  health.py
api/src/stitch_spike/services/: auth.py  db.py
api/src/web_api_poc/: app.py
api/src/web_api_poc/models/: sql_models.py
api/src/web_api_poc/services/: db.py
api/tests/: test_server.py  test_unit.py
app/: main.py
database/init/: pbtar-schemal.sql
database/test/: delete.sql  read.sql  test_scenario.sql  update.sql
docs/: developer_journal.md
src/: main.py
src/docs/: developer_journal.md  documentation.py
src/models/: health.py  outputs.py
src/routers/: health.py  mtcars.py
src/services/: auth.py  mtcars.py
tests/: test-integration.sh  test_integration.py  test_unit.py
