[project]
name = "web-api-poc"
version = "0.1.0"
description = "POC for web API using fastapi"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
